language/move-prover/tests/sources/functional/emits.exp
Move prover returns: exiting with boogie verification errors
error: function does not emit the expected event

    ┌── tests/sources/functional/emits.move:62:9 ───
    │
 62 │         emits DummyEvent{msg: 0} to handle;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/emits.move:56:5: conditional_missing_condition_incorrect
    =         x = <redacted>,
    =         handle = <redacted>,
    =         result = <redacted>
    =     at tests/sources/functional/emits.move:57:9: conditional_missing_condition_incorrect

error: function does not emit the expected event

    ┌── tests/sources/functional/emits.move:53:9 ───
    │
 53 │         emits DummyEvent{msg: 0} to handle if x > 0;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/emits.move:47:5: conditional_wrong_condition_incorrect
    =         x = <redacted>,
    =         handle = <redacted>,
    =         result = <redacted>
    =     at tests/sources/functional/emits.move:48:9: conditional_wrong_condition_incorrect

error: function does not emit the expected event

    ┌── tests/sources/functional/emits.move:30:9 ───
    │
 30 │         emits DummyEvent{msg: 0} to _handle2;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/emits.move:26:5: simple_wrong_handle_incorrect
    =         handle = <redacted>,
    =         _handle2 = <redacted>,
    =         result_1 = <redacted>,
    =         result_2 = <redacted>
    =     at tests/sources/functional/emits.move:27:16: simple_wrong_handle_incorrect

error: function does not emit the expected event

    ┌── tests/sources/functional/emits.move:23:9 ───
    │
 23 │         emits DummyEvent{msg: 1} to handle;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/emits.move:19:5: simple_wrong_msg_incorrect
    =         handle = <redacted>,
    =         result = <redacted>
    =     at tests/sources/functional/emits.move:20:16: simple_wrong_msg_incorrect
